--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-source-filesystem": "^1.5.29",
+    "gatsby-transformer-remark": "^1.7.39",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
