--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-remark-prismjs": "^1.2.24",
     "gatsby-source-filesystem": "^1.5.29",
     "gatsby-transformer-remark": "^1.7.39",
+    "lodash-webpack-plugin": "^0.11.4",
     "react-helmet": "^5.2.0",
     "typography-theme-lawton": "^0.15.10"
   },
