--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-plugin-typography": "^1.7.18",
     "gatsby-remark-prismjs": "^1.2.24",
     "gatsby-source-filesystem": "^1.5.29",
+    "gatsby-transformer-json": "^1.0.16",
     "gatsby-transformer-remark": "^1.7.39",
     "lodash-webpack-plugin": "^0.11.4",
     "react-helmet": "^5.2.0",
