--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "gatsby": "^1.9.241",
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-react-helmet": "^2.0.8",
+    "gatsby-plugin-sharp": "^1.6.43",
     "gatsby-plugin-typography": "^1.7.18",
+    "gatsby-remark-images": "^1.5.62",
     "gatsby-remark-prismjs": "^1.2.24",
     "gatsby-source-filesystem": "^1.5.29",
     "gatsby-transformer-json": "^1.0.16",
