--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gatsby": "^1.9.241",
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-react-helmet": "^2.0.8",
+    "gatsby-plugin-robots-txt": "^1.0.2",
     "gatsby-plugin-sharp": "^1.6.43",
     "gatsby-plugin-typography": "^1.7.18",
     "gatsby-remark-images": "^1.5.62",
