Install react-social-icons dependency

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-transformer-remark": "^1.7.39",
     "lodash-webpack-plugin": "^0.11.4",
     "react-helmet": "^5.2.0",
+    "react-social-icons": "^3.0.0",
     "typography-theme-lawton": "^0.15.10",
     "typography-theme-noriega": "^0.15.10"
   },
