--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "author": "Janis Lesinskis <janis@customprogrammingsolutions.com>",
   "dependencies": {
-    "gatsby": "^1.9.241",
+    "axios": "^0.18.0",
+    "gatsby": "^1.9.277",
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-sharp": "^1.6.43",
