--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ node_js:
  - "10.7"
 before_install:
  - npm install --global gatsby-cli
+ - openssl aes-256-cbc -K $encrypted_dbbb8c9e52bb_key -iv $encrypted_dbbb8c9e52bb_iv -in .travis.key.enc -out .travis.key -d
+ - GIT_SSH_COMMAND="ssh -i .travis.key" git clone git@github.com:aapeliv/CPS_content.git
 script:
  - gatsby build
