--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 node_js:
  - "10.7"
+cache:
+  yarn: true
+  directories:
+    - node_modules
 before_install:
  - npm install --global gatsby-cli
  - openssl aes-256-cbc -K $encrypted_dbbb8c9e52bb_key -iv $encrypted_dbbb8c9e52bb_iv -in .travis.key.enc -out .travis.key -d
