--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ before_install:
  - npm install --global gatsby-cli
  - openssl aes-256-cbc -K $encrypted_dbbb8c9e52bb_key -iv $encrypted_dbbb8c9e52bb_iv -in .travis.key.enc -out .travis.key -d
  - chmod 0400 .travis.key
- - GIT_SSH_COMMAND="ssh -i .travis.key" git clone git@github.com:aapeliv/CPS_content.git
+ - GIT_SSH_COMMAND="ssh -i .travis.key" git clone git@github.com:shuttle1987/CPS_content.git
 script:
  - gatsby build
