--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ cache:
   yarn: true
   directories:
     - node_modules
+env:
+ - CONTENT_DIR="CPS_content/"
 before_install:
  - npm install --global gatsby-cli
  - openssl aes-256-cbc -K $encrypted_dbbb8c9e52bb_key -iv $encrypted_dbbb8c9e52bb_iv -in .travis.key.enc -out .travis.key -d
