--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-sharp": "^1.6.43",
+    "gatsby-plugin-sitemap": "^1.2.25",
     "gatsby-plugin-typography": "^1.7.18",
     "gatsby-remark-images": "^1.5.62",
     "gatsby-remark-prismjs": "^1.2.24",
