--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "gatsby": "^1.9.277",
     "gatsby-link": "^1.6.39",
+    "gatsby-plugin-feed": "^1.3.25",
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-sharp": "^1.6.43",
     "gatsby-plugin-sitemap": "^1.2.25",
