--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
  - openssl aes-256-cbc -K $encrypted_dbbb8c9e52bb_key -iv $encrypted_dbbb8c9e52bb_iv -in .travis.key.enc -out .travis.key -d
  - chmod 0400 .travis.key
  - GIT_SSH_COMMAND="ssh -i .travis.key" git clone git@github.com:shuttle1987/CPS_content.git
- - cd CPS_content && git log -n 1 --format=%H
+ - cd CPS_content && git log -n 1 --format=%H && cd ..
 script:
  - gatsby build
 deploy:
