--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-feed": "^1.3.25",
     "gatsby-plugin-react-helmet": "^2.0.8",
+    "gatsby-plugin-sass": "^1.0.26",
     "gatsby-plugin-sharp": "^1.6.43",
     "gatsby-plugin-sitemap": "^1.2.25",
     "gatsby-plugin-typography": "^1.7.18",
