--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "gatsby-plugin-sass": "^1.0.26",
     "gatsby-plugin-sharp": "^1.6.43",
     "gatsby-plugin-sitemap": "^1.2.25",
-    "gatsby-plugin-typography": "^1.7.18",
     "gatsby-remark-images": "^1.5.62",
     "gatsby-remark-prismjs": "^1.2.24",
     "gatsby-source-filesystem": "^1.5.29",
@@ -20,9 +19,7 @@
     "gatsby-transformer-remark": "^1.7.39",
     "lodash-webpack-plugin": "^0.11.4",
     "react-helmet": "^5.2.0",
-    "react-social-icons": "^3.0.0",
-    "typography-theme-lawton": "^0.15.10",
-    "typography-theme-noriega": "^0.15.10"
+    "react-social-icons": "^3.0.0"
   },
   "keywords": [
     "gatsby"
