--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "gatsby": "^1.9.277",
     "gatsby-link": "^1.6.39",
+    "gatsby-plugin-favicon": "2.1.1",
     "gatsby-plugin-feed": "^1.3.25",
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-sass": "^1.0.26",
