--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-favicon": "2.1.1",
     "gatsby-plugin-feed": "^1.3.25",
+    "gatsby-plugin-matomo": "^0.6.0",
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-sass": "^1.0.26",
     "gatsby-plugin-sharp": "^1.6.48",
